# ranim_midi_visualizer

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  justfile
.github/workflows/: build.yml  release.yml
crates/music-utils/: Cargo.toml
crates/music-utils/src/: lib.rs
crates/ranim-midi-visualizer_lib/: Cargo.toml
crates/ranim-midi-visualizer_lib/src/: lib.rs  stroke_and_fill.rs
crates/ranim-midi-visualizer_math/: Cargo.toml
crates/ranim-midi-visualizer_math/src/: cyc_index.rs  func.rs  lib.rs  step_grid.rs
crates/ranim-midi-visualizer_math/src/func/: segmented_linear.rs
crates/ranim-midi-visualizer_ui/: Cargo.toml
crates/ranim-midi-visualizer_ui/src/: defaults.rs  deref.rs  getters_and_setters.rs  lib.rs  tabs.rs  utils.rs  widgets.rs
crates/ranim-midi-visualizer_ui/src/widgets/: midi_visualizer_preview.rs
crates/ranim_midi_visualizer_lib/: Cargo.toml
crates/ranim_midi_visualizer_lib/src/: anim.rs  items.rs  lib.rs  linear.rs  midi.rs
crates/ranim_midi_visualizer_lib/src/anim/: midi_note_anim.rs
crates/ranim_midi_visualizer_lib/src/assets/: template.typ
crates/ranim_midi_visualizer_lib/src/items/: piano_keyboard.rs  piano_pedals.rs
crates/ranim_midi_visualizer_lib/src/midi/: instant.rs  loc.rs  music.rs  note.rs  track.rs
crates/ranim_music/: Cargo.toml
crates/ranim_music/src/: lib.rs
crates/ranim_music/src/items/: piano_keyboard.rs  piano_pedals.rs
crates/structured-midi/: Cargo.toml
crates/structured-midi/src/: instant.rs  lib.rs  music.rs  note.rs  track.rs
crates/structured-midi/src/utils/func/: ladder.rs
crates/waveform-utils/: Cargo.toml
crates/waveform-utils/src/: envelope.rs  freq.rs  lib.rs  synth.rs  waveform.rs
crates/waveform-utils/src/synth/: simple.rs  simple_waveform.rs
crates/waveform-utils/src/waveform/: basic.rs  harmonic_series.rs
src/: main.rs
src/assets/: song_2.mid
src/preview/: timeline.rs
src/preview/shaders/: depth_visual.wgsl
