[package]
name = "ranim_midi_visualizer"
version = "0.1.1"
edition = "2024"
authors = ["F.X.P. <litran39@hotmail.com>"]
license = "MIT"
description = "A MIDI visualizer that renders the notes of a MIDI file as a scrolling video. Powered by Rust and `ranim` library."

[dependencies]
ranim = { workspace = true, features = ["render", "preview"] }
anyhow = "1.0.101"
itertools = "0.14.0"
tracing = "0.1.44"
tracing-indicatif = "0.3.14"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
uncased = "0.9.10"
color = "0.3.2"
phf = { version = "0.13.1", features = ["macros", "uncased"] }
structured-midi = { workspace = true }

[dependencies.clap]
version = "4.5.57"
features = ["cargo", "color"]

[dependencies.ranim_midi_visualizer_lib]
path = "crates/ranim_midi_visualizer_lib"
features = ["serde"]

[workspace]
members = [
    "crates/ranim_music",
    "crates/ranim_midi_visualizer_lib",
    "crates/ranim_path_bool",
    "crates/structured-midi",
]

[workspace.dependencies]
itertools = "0.14.0"
int-enum = "1.2.0"
structured-midi = { path = "crates/structured-midi" }
ranim_music = { path = "crates/ranim_music" }

[workspace.dependencies.ranim]
git = "https://github.com/AzurIce/ranim.git"
# git = "https://github.com/vanleefxp/ranim_fork.git"
# branch = "feat/merged-gpu-buffer"
features = ["render"]

[workspace.dependencies.ranim-macros]
git = "https://github.com/AzurIce/ranim.git"
# git = "https://github.com/vanleefxp/ranim_fork.git"
# branch = "feat/merged-gpu-buffer"
