[workspace.package]
edition = "2024"
authors = ["F.X.P. <litran39@hotmail.com>"]
license = "MIT"
version = "0.1.2"

[package]
name = "ranim-midi-visualizer"
description = "A MIDI visualizer that renders MIDI files into scrolling videos. Powered by Rust and Ranim."
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
ranim = { workspace = true, features = ["render", "preview"] }
anyhow = "1.0.101"
itertools = "0.14.0"
tracing = { workspace = true }
tracing-indicatif = { workspace = true }
tracing-subscriber = { workspace = true }
uncased = "0.9.10"
color = "0.3.2"
phf = { workspace = true }
structured-midi = { workspace = true }
eframe = { workspace = true }
ranim-midi-visualizer_lib = { workspace = true }
ranim-midi-visualizer_ui = { path = "crates/ranim-midi-visualizer_ui" }

[dependencies.clap]
version = "4.5.57"
features = ["cargo", "color"]

[workspace]
members = [
    "crates/ranim_music",
    "crates/ranim-midi-visualizer_lib",
    "crates/structured-midi",
    "crates/ranim-midi-visualizer_ui",
    "crates/music-utils",
    "crates/ranim-midi-visualizer_math",
]

[workspace.dependencies]
eframe = "0.34.1"
egui_dock = "0.19.1"
egui-phosphor = "0.12.0"
egui_tiles = "0.15.0"
egui_dialogs = { git = "https://github.com/vanleefxp/egui-dialogs_fork.git" }

tracing = "0.1.44"
tracing-indicatif = "0.3.14"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

ranim_music = { path = "crates/ranim_music" }
ranim-midi-visualizer_math = { path = "crates/ranim-midi-visualizer_math" }

itertools = "0.14.0"
int-enum = "1.2.0"
rfd = "0.17.2"
num-integer = "0.1.46"
glam = "0.32.1"
ordered-float = "5.1.0"
async-channel = "2.5.0"
structured-midi = { path = "crates/structured-midi" }
music-utils = { path = "crates/music-utils" }
phf = { version = "0.13.1", features = ["macros", "uncased"] }
enum-ordinalize = "4.3.2"
serde = { version = "1.0.228", features = ["serde_derive"] }
toml = "1.1.2"

[workspace.dependencies.ranim]
git = "https://github.com/AzurIce/ranim.git"
# git = "https://github.com/vanleefxp/ranim_fork.git"
features = ["render"]

[workspace.dependencies.ranim-macros]
git = "https://github.com/AzurIce/ranim.git"
# git = "https://github.com/vanleefxp/ranim_fork.git"

[workspace.dependencies.ranim-midi-visualizer_lib]
path = "crates/ranim-midi-visualizer_lib"
features = ["serde"]

[workspace.dependencies.derive_more]
version = "2.1.1"
features = [
    "deref",
    "deref_mut",
    "index",
    "index_mut",
    "into_iterator",
    "from",
    "into",
    "display",
]
