[package]
name = "ranim-midi-visualizer_lib"
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
ranim = { workspace = true }
ranim-macros = { workspace = true }
ranim_music = { workspace = true }
ranim-midi-visualizer_math = { workspace = true }

midly = "0.5.3"
serde = { workspace = true, optional = true, features = ["serde_derive"] }
malachite-base = "0.9.1"
itertools = { workspace = true }
glam = "0.30.10"
color = "0.3.2"
structured-midi = { workspace = true }
music-utils = { workspace = true }

[features]
serde = [
    "dep:serde",
    "glam/serde",
    "color/serde",
    "ranim_music/serde",
    "structured-midi/serde",
]
