[package]
name = "ranim-midi-visualizer_ui"
edition.workspace = true
authors.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
# egui series
eframe = { workspace = true, features = ["persistence"] }
egui-phosphor = { workspace = true }
egui_dock = { workspace = true }
egui_dialogs = { workspace = true }

# Ranim series
ranim = { workspace = true }

ranim_music = { workspace = true }
ranim-midi-visualizer_lib = { workspace = true, features = ["serde"] }
ranim-midi-visualizer_math = { workspace = true }
structured-midi = { workspace = true }
music-utils = { workspace = true }
waveform-utils = { workspace = true }

rfd = { workspace = true }
derive_more = { workspace = true }
derivative = { workspace = true }
# i_triangle = { version = "0.41.0", features = ["glam"] }
ordered-float = { workspace = true }
async-channel = { workspace = true }
tracing = { workspace = true }
enum-ordinalize = { workspace = true }
serde = { workspace = true }
toml = { workspace = true, features = ["serde"] }
rustysynth = { workspace = true }
cpal = { workspace = true }
