[package]
name = "ranim_midi_visualizer_lib"
version = "0.1.0"
edition = "2024"

[dependencies]
ranim = { workspace = true }
ranim-macros = { workspace = true }
midly = "0.5.3"
serde = { version = "1.0.228", optional = true, features = ["serde_derive"] }
malachite-base = "0.9.1"
itertools = { workspace = true }
glam = "0.30.10"
color = "0.3.2"
ordered-float = "5.1.0"
ranim_music = { workspace = true }
structured-midi = { workspace = true }

[features]
serde = [
    "dep:serde",
    "glam/serde",
    "color/serde",
    "ranim_music/serde",
    "structured-midi/serde",
]
