[package]
name = "structured-midi"
version = "0.1.0"
edition = "2024"

[dependencies]
midly = "0.5.3"
serde = { version = "1.0.228", optional = true }
itertools = { workspace = true }
int-enum = { workspace = true }

[dependencies.derive_more]
version = "2.1.1"
features = ["deref", "deref_mut", "index", "index_mut", "into_iterator"]

[dependencies.interavl]
git = "https://github.com/vanleefxp/interavl_fork.git"
features = ["serde", "closest"]

[features]
serde = ["dep:serde"]
